--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
     "lucide-react": "^0.476.0",
+    "pretty-print-json": "^3.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.2.0",
