--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,13 +2,14 @@
    "version": "2.0.0",
    "tasks": [
       {
-         "type": "cargo",
-         "command": "run",
+         "label": "cargo watch -x run",
+         "type": "shell",
+         "command": "cargo watch -x run",
          "problemMatcher": ["$rustc"],
-         "label": "rust: cargo run",
          "options": {
             "cwd": "${workspaceFolder}/backend"
          },
+         "detail": "vite",
          "runOptions": {
             "runOn": "folderOpen"
          },
