--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,4 +12,5 @@ dotenv = "0.15"
 tracing-subscriber = "0.3.19"
 serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.140"
+axum-extra = { version = "0.10.0", features = ["typed-header"] }
 
