--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,4 +13,5 @@ tracing-subscriber = "0.3.19"
 serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.140"
 axum-extra = { version = "0.10.0", features = ["typed-header"] }
+regex = "1.11.1"
 
